feat(HU10 - Panel): Últimas mediciones
- Agregada zona horaria
- Consulta en tiempo real de nuevas mediciones
- Modificaciones a estilos

--- a/css/estilos.styl
+++ b/css/estilos.styl
@@ -1,3 +1,7 @@
+color_tres = rgb(100,242,47);
+color_dos = rgb(251,246,34);
+color_uno = rgb(244,10,10);
+
 #contenedor_principal
 	min-height 320px
 	margin-top 100px
@@ -19,4 +23,3 @@
 		
 .clear
 	clear both
-		
