--- a/css/mediciones.styl
+++ b/css/mediciones.styl
@@ -26,23 +26,6 @@ input[type="radio"]:hover
 	width 11%
 	max-width 100px
 	
-	#cero
-		background-color color_fe
-		
-	#uno
-		background-color color_uno
-	#dos
-		background-color color_dos
-		
-	#tres
-		background-color color_tres
-		
-	#cuatro
-		background-color color_cuatro
-		
-	#cinco
-		background-color color_cinco
-	
 	.contenedor
 		cursor pointer
 		float left
@@ -65,3 +48,21 @@ input[type="radio"]:hover
 .separador
 	width 5px
 	display inline-block
+	
+.cero
+	background-color color_fe
+	
+.uno
+	background-color color_uno
+	
+.dos
+	background-color color_dos
+	
+.tres
+	background-color color_tres
+	
+.cuatro
+	background-color color_cuatro
+	
+.cinco
+	background-color color_cinco
