feat(HU07 - Roceria): Mediciones anteriores
- Corrección en horarios de fechas guardadas de las mediciones
- Mejoras en visualizaciones
- Mejora en el código

--- a/css/mediciones.styl
+++ b/css/mediciones.styl
@@ -28,11 +28,12 @@ input[type="radio"]:hover
 	
 	.contenedor
 		cursor pointer
+		display inline-block
 		float left
 		height 10%
-		width 100%
+		width 90%
 		padding 3px
-		
+
 	.icon
 		margin:5% auto;
 		background-color: rgba(255,255,255,.15);
@@ -48,6 +49,12 @@ input[type="radio"]:hover
 .separador
 	width 5px
 	display inline-block
+
+.medicion_anterior
+	border-left 5px solid black
+
+.medicion_normal
+	border-left 5px solid transparent
 	
 .cero
 	background-color color_fe
