style(general): Mejoras en estilos

--- a/css/estilos.styl
+++ b/css/estilos.styl
@@ -1,6 +1,6 @@
 #contenedor_principal
-	min-height 320px
-	margin-top 100px
+	height 100vh -100px
+	margin-top 80px
 
 #menu_lateral
 	margin-top 80px
