--- a/css/mediciones.styl
+++ b/css/mediciones.styl
@@ -58,3 +58,11 @@ input[type="radio"]:hover
 .titulo_costado
 	font-weight bold
 	width 200%
+	
+@media (max-width: 400px)
+	#mediciones
+		h4
+			margin 0
+			
+	.titulo_tipo_medicion
+		font-size 0.7em !important
