--- a/css/estilos.styl
+++ b/css/estilos.styl
@@ -1,3 +1,16 @@
+#cont_filtros
+	margin-top 10px
+
+#cont_mediciones
+	width 100%
+	height 400px
+
+#cont_panel
+	padding 0
+	
+	div
+		padding 0
+		
 #contenedor_principal
 	height 100vh -100px
 	margin-top 80px
