style(General): modificaciones a íconos y menú superior

--- a/css/estilos.styl
+++ b/css/estilos.styl
@@ -43,8 +43,10 @@ tamanio_menu = 50px;
 
 .icono
 	color gray
-	cursor pointer
 	text-decoration none
+	
+	:hover
+		color green
 	
 .modal
 	margin-top tamanio_menu
@@ -52,4 +54,14 @@ tamanio_menu = 50px;
 @media (max-width: 450px)
 	#select_sector_filtro, #select_via_filtro, #select_costado_filtro
 		width 70px
+
+.uk-iconnav
 	
+	li
+		margin-top 0px !important
+
+		a
+			padding-top 15px !important
+			
+			:hover
+				color green
